<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ouxt_lint_common</name>
  <version>0.0.7</version>
  <description>common linter settings for OUXT Polaris ROS2 packages</description>
  <maintainer email="ms.kataoka@gmail.com">Masaya Kataoka</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <exec_depend>ament_cmake_clang_format</exec_depend>
  <exec_depend>ament_cmake_copyright</exec_depend>
  <exec_depend>ament_cmake_pep257</exec_depend>
  <exec_depend>ament_cmake_xmllint</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
